syntax = "proto3";

package authentication;

// "directory/;package_name"
option go_package = "/;authentication";

service AuthenticationService {
  rpc Check (CheckRequest) returns (TokenData);
  rpc Logout (LogoutRequest) returns (Empty);
  rpc LogoutAll (LogoutAllRequest) returns (Empty);
}

message CheckRequest {
  string access_token = 1;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutAllRequest {
  string access_token = 1;
}

///////

message Empty {}

message TokenData {
  string user_id = 1;
  string domain_id = 2;
  string scopes = 3;
}
